<resources>

    <!--Screen Names-->
    <string name="scr_welcome">Welcome</string>
    <string name="scr_sign_up">Sign Up</string>
    <string name="scr_log_in">Log In</string>
    <string name="scr_register">Register Success</string>

    <!--Error prompt-->
    <string name="error_email">Wrong email format !</string>
    <string name="error_username">Wrong username format !</string>
    <string name="error_password">Wrong password input !</string>
    <string name="error_user_reg">Fail to register user !</string>

    <string name="app_name">Measuring Demo</string>
    <string name="main_title">Measuring User In App Interactions With Analytic Tools</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign in</string>
    <string name="log_in">Log In</string>
    <string name="demo_application">Demo application</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_text">Already have an account?</string>
    <string name="tnc"><![CDATA[By creating an account you agree to our Terms & Conditions and Privacy Policy]]></string>
    <string name="register_successfully">Register Successfully</string>
    <string name="touch_to_continue">Touch to continue</string>
    <string name="required_fields">Required Fields !</string>
    <string name="forgot_pwd">Forgot Password ?</string>
    <string name="error_user_not_found">User not registered !</string>

</resources>
