<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nacode.measuring.activities.LoginActivity">

    <com.flaviofaria.kenburnsview.KenBurnsView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space20"
        android:layout_marginTop="@dimen/space40"
        android:onClick="onClick"
        android:src="@drawable/ic_action_back" />

    <TextView
        android:id="@+id/tv_forgot_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/space20"
        android:layout_marginTop="@dimen/space20"
        android:text="@string/forgot_pwd"
        android:textColor="@android:color/white"
        android:textSize="@dimen/txt14"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_forgot_pwd"
        android:layout_below="@id/iv_back"
        android:layout_marginTop="@dimen/space40"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/space20"
        android:paddingRight="@dimen/space20">

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/space40"
            android:text="@string/log_in"
            android:textColor="@android:color/white"
            android:textSize="@dimen/txt22" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space20"
            android:background="@drawable/bg_edittext"
            android:orientation="vertical"
            android:paddingBottom="@dimen/space5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space5"
                android:text="@string/username"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/txt10" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:lines="1"
                android:paddingBottom="@dimen/vertical_padding_default"
                android:paddingTop="@dimen/vertical_padding_default"
                android:textColor="@android:color/white"
                android:textColorHint="@color/txt_hint"
                android:textSize="@dimen/txt16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space40"
            android:background="@drawable/bg_edittext"
            android:orientation="vertical"
            android:paddingBottom="@dimen/space5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space5"
                android:text="@string/password"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/txt10" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="@dimen/btn_width"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:lines="1"
                android:paddingBottom="@dimen/vertical_padding_default"
                android:paddingTop="@dimen/vertical_padding_default"
                android:textColor="@android:color/white"
                android:textColorHint="@color/txt_hint"
                android:textSize="@dimen/txt16" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_marginBottom="@dimen/space20"
            android:background="@drawable/bg_btn_purple"
            android:onClick="onClick"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/txt16" />

    </LinearLayout>

</RelativeLayout>
